; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_async_error.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_at86rf230.c_at86rf230_async_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.at86rf230_local = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.at86rf230_state_change = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"spi_async error %d\0A\00", align 1
@STATE_FORCE_TRX_OFF = common dso_local global i32 0, align 4
@at86rf230_async_error_recover = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.at86rf230_local*, %struct.at86rf230_state_change*, i32)* @at86rf230_async_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @at86rf230_async_error(%struct.at86rf230_local* %0, %struct.at86rf230_state_change* %1, i32 %2) #0 {
  %4 = alloca %struct.at86rf230_local*, align 8
  %5 = alloca %struct.at86rf230_state_change*, align 8
  %6 = alloca i32, align 4
  store %struct.at86rf230_local* %0, %struct.at86rf230_local** %4, align 8
  store %struct.at86rf230_state_change* %1, %struct.at86rf230_state_change** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %8 = getelementptr inbounds %struct.at86rf230_local, %struct.at86rf230_local* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @dev_err(i32* %10, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load %struct.at86rf230_local*, %struct.at86rf230_local** %4, align 8
  %14 = load %struct.at86rf230_state_change*, %struct.at86rf230_state_change** %5, align 8
  %15 = load i32, i32* @STATE_FORCE_TRX_OFF, align 4
  %16 = load i32, i32* @at86rf230_async_error_recover, align 4
  %17 = call i32 @at86rf230_async_state_change(%struct.at86rf230_local* %13, %struct.at86rf230_state_change* %14, i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @dev_err(i32*, i8*, i32) #1

declare dso_local i32 @at86rf230_async_state_change(%struct.at86rf230_local*, %struct.at86rf230_state_change*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
